--- a/app/assets/sass/xpl-cards.scss
+++ b/app/assets/sass/xpl-cards.scss
@@ -64,7 +64,7 @@ $wide-width: 1300px;
     font-size: 35px;
     color: govuk-colour("black");
     margin-left: -30px;
-    padding: 0 11px 0 0;
+    padding: 0 6px 0 0;
     height: 30px;
     width: 10px;
     background-image: url('/public/images/chevron-right.svg');
